--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "org.icddrb.standard"
+        applicationId "org.icddrb.champsdss"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
