--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.icddrb.standard">
+    package="org.icddrb.champsdss">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -20,12 +20,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/champsicon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name="org.icddrb.champsdss.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,28 +34,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingForm"
+            android:name="org.icddrb.champsdss.SettingForm"
             android:label="Device Setting" />
         <activity
-            android:name=".MainMenu"
+            android:name="org.icddrb.champsdss.MainMenu"
             android:label="Main Menu" />
         <activity
             android:name="navigationDrawer.NavigationActivity"
             android:label="Nav" />
         <activity
-            android:name=".SettingFormNew"
+            android:name="org.icddrb.champsdss.SettingFormNew"
             android:label="Device Settings" />
         //Android Manifest Code
         <!-- <activity android:name="org.icddrb.data.Screening" android:label="Screening" /> -->
 
         //Service
-        <service android:name=".DataSyncService" />
+        <service android:name="org.icddrb.champsdss.DataSyncService" />
+
 
         <activity
-            android:name=".LogActivity"
-            android:label="@string/title_activity_log" />
-        <activity
-            android:name=".MainActivity"
+            android:name="org.icddrb.champsdss.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/CustomTheme"></activity>
     </application>
