--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,15 @@
             android:name="org.icddrb.champsdss.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/CustomTheme"></activity>
+
         <activity android:name=".Household_list" />
+        <activity android:name=".Household" />
+        <activity android:name=".Member" />
+        <activity android:name=".Member_list" />
+        <activity android:name=".SES" />
+        <activity android:name=".SES_list" />
+        <activity android:name=".PregHis" />
+        <activity android:name=".PregHis_list" />
     </application>
 
 </manifest>
