--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
         <activity android:name=".PregHis" />
         <activity android:name=".PregHis_list" />
 
-        <activity android:name=".Baris" android:label="Bari Form" android:theme="@style/CustomDialogTheme" />
+        <activity android:name=".Baris" android:label="Bari Form" android:theme="@style/CustomThemeActivity" />
         <activity android:name=".Household_Visit" />
 
     </application>
