--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,15 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    //compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile files('libs/gson-2.5.jar')
     compile 'joda-time:joda-time:2.9.2'
     // for joda
     compile files('libs/ksoap2-android-assembly-2.4-jar-with-dependencies.jar')
     compile files('libs/org.apache.http.legacy.jar')
+    //compile files('libs/gson-2.5.jar')
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    //compile 'com.google.code.gson:gson:2.5'
+    //compile files('libs/android-support-v4.jar')
 }
