--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBqS3hwn_jev_ydXr3lNJvEFN5oIpXGjGg"/>
+
+
         <activity
             android:name="org.icddrb.champsdss.LoginActivity"
             android:label="@string/app_name">
@@ -68,6 +74,7 @@
 
         <activity android:name=".Baris" android:label="Bari Form" android:theme="@style/CustomThemeActivity" />
         <activity android:name=".Household_Visit" />
+        <activity android:name="map.IconGeneratorDemoActivity" />
 
     </application>
 
