--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -27,11 +27,10 @@
         android:theme="@style/CustomTheme">
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBqS3hwn_jev_ydXr3lNJvEFN5oIpXGjGg"/>
-
+            android:value="AIzaSyBqS3hwn_jev_ydXr3lNJvEFN5oIpXGjGg" />
 
         <activity
-            android:name="org.icddrb.champsdss.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,29 +39,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.icddrb.champsdss.SettingForm"
+            android:name=".SettingForm"
             android:label="Device Setting" />
         <activity
-            android:name="org.icddrb.champsdss.MainMenu"
+            android:name=".MainMenu"
             android:label="Main Menu" />
         <activity
             android:name="navigationDrawer.NavigationActivity"
             android:label="Nav" />
         <activity
-            android:name="org.icddrb.champsdss.SettingFormNew"
+            android:name=".SettingFormNew"
             android:label="Device Settings" />
         //Android Manifest Code
         <!-- <activity android:name="org.icddrb.data.Screening" android:label="Screening" /> -->
 
         //Service
-        <service android:name="org.icddrb.champsdss.DataSyncService" />
-
+        <service android:name=".DataSyncService" />
+        <service android:name=".Sync_Service" />
 
         <activity
-            android:name="org.icddrb.champsdss.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/CustomTheme"></activity>
-
+            android:theme="@style/CustomTheme" />
         <activity android:name=".Household_list" />
         <activity android:name=".Household" />
         <activity android:name=".Member" />
@@ -71,11 +69,15 @@
         <activity android:name=".SES_list" />
         <activity android:name=".PregHis" />
         <activity android:name=".PregHis_list" />
-
-        <activity android:name=".Baris" android:label="Bari Form" android:theme="@style/CustomThemeActivity" />
+        <activity
+            android:name=".Baris"
+            android:label="Bari Form"
+            android:theme="@style/CustomThemeActivity" />
         <activity android:name=".Household_Visit" />
         <activity android:name="map.IconGeneratorDemoActivity" />
 
+        <service android:name=".GPSService" android:process=":gps_service" />
+        <action android:name="gps_data"/>
     </application>
 
 </manifest>
