--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.icddrb.champsdss">
+    package="org.icddrb.champsdsssur">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -30,7 +30,7 @@
             android:value="AIzaSyBqS3hwn_jev_ydXr3lNJvEFN5oIpXGjGg" />
 
         <activity
-            android:name=".LoginActivity"
+            android:name="org.icddrb.champsdsssur.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,44 +39,44 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingForm"
+            android:name="org.icddrb.champsdsssur.SettingForm"
             android:label="Device Setting" />
         <activity
-            android:name=".MainMenu"
+            android:name="org.icddrb.champsdsssur.MainMenu"
             android:label="Main Menu" />
         <activity
             android:name="navigationDrawer.NavigationActivity"
             android:label="Nav" />
         <activity
-            android:name=".SettingFormNew"
+            android:name="org.icddrb.champsdsssur.SettingFormNew"
             android:label="Device Settings" />
         //Android Manifest Code
         <!-- <activity android:name="org.icddrb.data.Screening" android:label="Screening" /> -->
 
         //Service
-        <service android:name=".DataSyncService" />
-        <service android:name=".Sync_Service" />
+        <service android:name="org.icddrb.champsdsssur.DataSyncService" />
+        <service android:name="org.icddrb.champsdsssur.Sync_Service" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="org.icddrb.champsdsssur.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/CustomTheme" />
-        <activity android:name=".Household_list" />
-        <activity android:name=".Household" />
-        <activity android:name=".Member" />
-        <activity android:name=".Member_list" />
-        <activity android:name=".SES" />
-        <activity android:name=".SES_list" />
-        <activity android:name=".PregHis" />
-        <activity android:name=".PregHis_list" />
+        <activity android:name="org.icddrb.champsdsssur.Household_list" />
+        <activity android:name="org.icddrb.champsdsssur.Household" />
+        <activity android:name="org.icddrb.champsdsssur.Member" />
+        <activity android:name="org.icddrb.champsdsssur.Member_list" />
+        <activity android:name="org.icddrb.champsdsssur.SES" />
+        <activity android:name="org.icddrb.champsdsssur.SES_list" />
+        <activity android:name="org.icddrb.champsdsssur.PregHis" />
+        <activity android:name="org.icddrb.champsdsssur.PregHis_list" />
         <activity
-            android:name=".Baris"
+            android:name="org.icddrb.champsdsssur.Baris"
             android:label="Bari Form"
             android:theme="@style/CustomThemeActivity" />
-        <activity android:name=".Household_Visit" />
+        <activity android:name="org.icddrb.champsdsssur.Household_Visit" />
         <activity android:name="map.IconGeneratorDemoActivity" />
 
-        <service android:name=".GPSService" android:process=":gps_service" />
+        <service android:name="org.icddrb.champsdsssur.GPSService" android:process=":gps_service" />
         <action android:name="gps_data"/>
     </application>
 
