--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
         <activity android:name="org.icddrb.champsdsssur.Household_Visit" />
         <activity android:name="map.IconGeneratorDemoActivity" />
         <activity android:name=".Events_NewMem" />
+        <activity android:name=".SettingForm_QA" />
+        <activity android:name=".MainMenu_QA" />
 
         <service android:name="org.icddrb.champsdsssur.GPSService" android:process=":gps_service" />
         <action android:name="gps_data"/>
